Oberfläche kann ausgeführt werden.

--- a/anwendung/src/main/webapp/index.xhtml
+++ b/anwendung/src/main/webapp/index.xhtml
@@ -9,6 +9,9 @@
             <f:view>
                 <h:outputLabel value="Hello, world"/>
             </f:view>
+            <h:form>
+                <h:commandButton value="Haushaltsbuchführung beginnen" action="#{haushaltsbuchführung.beginnen}"/>
+            </h:form>
         </ui:define>
     </ui:composition>
 </body>
