Ausgaben buchen per UI

--- a/anwendung/src/main/webapp/hauptbuch.xhtml
+++ b/anwendung/src/main/webapp/hauptbuch.xhtml
@@ -22,6 +22,11 @@
                         <f:param name="id" value="#{hauptbuch.id}"/>
                     </h:link>
                 </li>
+                <li>
+                    <h:link value="Ausgabe buchen" outcome="ausgabeBuchen">
+                        <f:param name="id" value="#{hauptbuch.id}"/>
+                    </h:link>
+                </li>
             </ul>
             <div>
                 <h3>Vermögen</h3>
