--- a/anwendung/src/main/webapp/index.xhtml
+++ b/anwendung/src/main/webapp/index.xhtml
@@ -1,23 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:b="http://bootsfaces.net/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <body>
     <ui:composition template="WEB-INF/template.xhtml">
         <ui:define name="content">
-            <h1>Haushaltsbuch</h1>
-            <f:view>
-                <h:outputLabel value="Hello, world"/>
-            </f:view>
-
-            <h:outputLabel value="#{haushaltsbuchführung.identitätsmerkmal}"></h:outputLabel>
-
-            <h:link value="Hauptbuch" outcome="hauptbuch">
-                <f:param name="id" value="#{haushaltsbuchführung.identitätsmerkmal}"/>
-            </h:link>
-            <h:form>
-                <h:commandButton value="Haushaltsbuchführung beginnen" action="#{haushaltsbuchführung.beginnen}"/>
-            </h:form>
+            <b:jumbotron>
+                <h1>Haushaltsbuch</h1>
+                <p>Jetzt mit der Haushaltsbuchführung beginnen und ein
+                Übersicht des eigenen Vermögens erhalten.</p>
+                <h:form>
+                    <b:commandButton value="Haushaltsbuchführung beginnen"
+                                     look="primary"
+                                     action="#{haushaltsbuchführung.beginnen}"/>
+                </h:form>
+            </b:jumbotron>
         </ui:define>
     </ui:composition>
 </body>
