--- a/anwendung/src/main/webapp/hauptbuch.xhtml
+++ b/anwendung/src/main/webapp/hauptbuch.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <body>
@@ -16,58 +16,55 @@
             <h2>Hauptbuch</h2>
             (<h:outputLabel value="#{hauptbuch.id}"/>)
             <br/>
-            <b:row>
-                <b:buttonGroup>
-                    <b:button value="Konto anlegen" outcome="kontoAnlegen">
-                        <f:param name="id" value="#{hauptbuch.id}"/>
-                    </b:button>
-                    <b:button value="Ausgabe buchen" outcome="ausgabeBuchen">
-                        <f:param name="id" value="#{hauptbuch.id}"/>
-                    </b:button>
-                </b:buttonGroup>
-            </b:row>
+
+
+                <p:toolbar>
+                    <f:facet name="left">
+                        <p:button value="Konto anlegen" outcome="kontoAnlegen">
+                            <f:param name="id" value="#{hauptbuch.id}"/>
+                        </p:button>
+                        <p:button value="Ausgabe buchen" outcome="ausgabeBuchen">
+                            <f:param name="id" value="#{hauptbuch.id}"/>
+                        </p:button>
+                    </f:facet>
+                </p:toolbar>
+
             <br/>
-            <b:row>
-                <b:column span="6">
-                    <b:panel collapsed="true" title="Vermögen">
+
+
+            <p:panelGrid columns="2">
+                    <p:panel collapsed="false" header="Vermögen" toggleable="true">
                         <ul>
                             <ui:repeat value="#{hauptbuch.vermögen}" var="v">
                                 <li><h:outputLabel value="#{v}"/></li>
                             </ui:repeat>
                         </ul>
-                    </b:panel>
-                </b:column>
-                <b:column span="6">
-                    <b:panel collapsed="true" title="Schulden">
+                    </p:panel>
+
+                    <p:panel collapsed="true" header="Schulden">
                         <ul>
                             <ui:repeat value="#{hauptbuch.schulden}" var="s">
                                 <li><h:outputLabel value="#{s}"/> </li>
                             </ui:repeat>
                         </ul>
-                    </b:panel>
-                </b:column>
-            </b:row>
+                    </p:panel>
 
-            <b:row>
-                <b:column span="6">
-                    <b:panel collapsed="true" title="Einnahmen">
+
+                    <p:panel collapsed="true" header="Einnahmen">
                         <ul>
                             <ui:repeat value="#{hauptbuch.einnahmen}" var="e">
                                 <li><h:outputLabel value="#{e}"/></li>
                             </ui:repeat>
                         </ul>
-                    </b:panel>
-                </b:column>
-                <b:column span="6">
-                    <b:panel collapsed="true" title="Ausgaben">
+                    </p:panel>
+                    <p:panel collapsed="true" header="Ausgaben">
                         <ul>
                             <ui:repeat value="#{hauptbuch.ausgaben}" var="a">
                                 <li><h:outputLabel value="#{a}"/></li>
                             </ui:repeat>
                         </ul>
-                    </b:panel>
-                </b:column>
-            </b:row>
+                    </p:panel>
+            </p:panelGrid>
         </ui:define>
     </ui:composition>
 </body>
