--- a/anwendung/src/main/webapp/kontoAnlegen.xhtml
+++ b/anwendung/src/main/webapp/kontoAnlegen.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <body>
@@ -13,48 +13,48 @@
 
         <ui:define name="content">
             <h:form>
-                <b:panel title="Konto anlegen" look="primary" collapsible="false">
-                    <b:row>
-                        <b:column colMd="2">
+                <p:panel title="Konto anlegen" look="primary" collapsible="false">
+                    <p:row>
+                        <p:column colMd="2">
                             <label for="kontoname">Kontoname</label>
-                        </b:column>
-                        <b:column colMd="4">
-                            <b:inputText id="kontoname" value="#{kontoAnlegen.kontoname}"
+                        </p:column>
+                        <p:column colMd="4">
+                            <p:inputText id="kontoname" value="#{kontoAnlegen.kontoname}"
                                          placeholder="Kontonamen hier eingeben">
                                 <f:validateRequired />
-                            </b:inputText>
-                        </b:column>
-                        <b:column colMd="6">
-                            <b:message for="kontoname"/>
-                        </b:column>
-                    </b:row>
-                    <b:row>
-                        <b:column colMd="2">
+                            </p:inputText>
+                        </p:column>
+                        <p:column colMd="6">
+                            <p:message for="kontoname"/>
+                        </p:column>
+                    </p:row>
+                    <p:row>
+                        <p:column colMd="2">
                             <label for="kontoart">Kontoart</label>
-                        </b:column>
-                        <b:column colMd="4">
-                            <b:selectOneMenu id="kontoart" value="#{kontoAnlegen.kontoart}">
+                        </p:column>
+                        <p:column colMd="4">
+                            <p:selectOneMenu id="kontoart" value="#{kontoAnlegen.kontoart}">
                                 <f:selectItems value="#{kontoAnlegen.kontoarten}"
                                                var="kontoart"
                                                itemValue="#{kontoart}"
                                                itemLabel="#{kontoart.bezeichnung}"/>
-                            </b:selectOneMenu>
-                        </b:column>
-                    </b:row>
+                            </p:selectOneMenu>
+                        </p:column>
+                    </p:row>
                     <hr/>
-                    <b:row>
-                        <b:column colMd="2" offsetMd="2">
-                            <b:button value="Zurück" outcome="hauptbuch">
+                    <p:row>
+                        <p:column colMd="2" offsetMd="2">
+                            <p:button value="Zurück" outcome="hauptbuch">
                                 <f:param name="id" value="#{kontoAnlegen.id}"/>
-                            </b:button>
-                        </b:column>
-                        <b:column colMd="2">
-                            <b:commandButton value="Konto anlegen"
+                            </p:button>
+                        </p:column>
+                        <p:column colMd="2">
+                            <p:commandButton value="Konto anlegen"
                                              action="#{kontoAnlegen.ausführen()}"
                                              look="primary"/>
-                        </b:column>
-                    </b:row>
-                </b:panel>
+                        </p:column>
+                    </p:row>
+                </p:panel>
             </h:form>
         </ui:define>
     </ui:composition>
