--- a/anwendung/src/main/webapp/ausgabeBuchen.xhtml
+++ b/anwendung/src/main/webapp/ausgabeBuchen.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
@@ -15,31 +15,31 @@
         <ui:define name="content">
 
             <h:form>
-            <b:panel>
-                <b:row>
-                    <b:inputText id="betrag" value="#{ausgabeBuchen.betrag}"  span="2" placeholder="Betrag"/>
-                    <b:selectOneMenu id="aktivkonto" value="#{ausgabeBuchen.sollkonto}" span="4" placeholder="von">
+            <p:panel>
+                <p:row>
+                    <p:inputText id="betrag" value="#{ausgabeBuchen.betrag}"  span="2" placeholder="Betrag"/>
+                    <p:selectOneMenu id="aktivkonto" value="#{ausgabeBuchen.sollkonto}" span="4" placeholder="von">
                         <f:selectItems value="#{ausgabeBuchen.aktivkonten}"/>
-                    </b:selectOneMenu>
-                    <b:selectOneMenu id="aufwandskonto" value="#{ausgabeBuchen.habenkonto}" span="4" placeholder="an">
+                    </p:selectOneMenu>
+                    <p:selectOneMenu id="aufwandskonto" value="#{ausgabeBuchen.habenkonto}" span="4" placeholder="an">
                         <f:selectItems value="#{ausgabeBuchen.aufwandskonten}"/>
-                    </b:selectOneMenu>
-                </b:row>
+                    </p:selectOneMenu>
+                </p:row>
                 <hr/>
                 <h:inputHidden value="#{ausgabeBuchen.id}" id="id"/>
-                <b:row>
-                    <b:column span="2" offset="2">
-                        <b:button value="zurück" outcome="hauptbuch">
+                <p:row>
+                    <p:column span="2" offset="2">
+                        <p:button value="zurück" outcome="hauptbuch">
                             <f:param name="id" value="#{ausgabeBuchen.id}"/>
-                        </b:button>
-                    </b:column>
-                    <b:column span="2">
-                        <b:commandButton value="Ausgabe buchen" action="#{ausgabeBuchen.ausführen}">
+                        </p:button>
+                    </p:column>
+                    <p:column span="2">
+                        <p:commandButton value="Ausgabe buchen" action="#{ausgabeBuchen.ausführen}">
                             <f:param name="id" value="#{param.id}"/>
-                        </b:commandButton>
-                    </b:column>
-                </b:row>
-            </b:panel>
+                        </p:commandButton>
+                    </p:column>
+                </p:row>
+            </p:panel>
             </h:form>
         </ui:define>
     </ui:composition>
