--- a/anwendung/src/main/webapp/index.xhtml
+++ b/anwendung/src/main/webapp/index.xhtml
@@ -2,22 +2,22 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <body>
     <ui:composition template="WEB-INF/template.xhtml">
         <ui:define name="content">
-            <b:jumbotron>
+            <p:panel>
                 <h1>Haushaltsbuch</h1>
                 <p>Jetzt mit der Haushaltsbuchführung beginnen und ein
                 Übersicht des eigenen Vermögens erhalten.</p>
                 <h:form>
-                    <b:commandButton value="Haushaltsbuchführung beginnen"
-                                     look="primary"
+                    <p:commandButton id="beginnen"
+                            value="Haushaltsbuchführung beginnen"
                                      action="#{haushaltsbuchführung.beginnen}"/>
                 </h:form>
-            </b:jumbotron>
+            </p:panel>
         </ui:define>
     </ui:composition>
 </body>
