--- a/anwendung/src/main/webapp/WEB-INF/template.xhtml
+++ b/anwendung/src/main/webapp/WEB-INF/template.xhtml
@@ -3,20 +3,42 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
+      xmlns:b="http://butterfaces.larmic.de/components"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Haushaltsbuch</title>
     <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
 </h:head>
 <h:body>
 
-    <p:panel>
+    <nav class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button class="navbar-toggle collapsed" aria-expanded="false" aria-controls="navbar" type="button" data-toggle="collapse" data-target="#navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/index.jsf">Haushaltsbuch</a>
+            </div>
+            <div class="navbar-collapse collapse" id="navbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="X">X</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
             <ui:insert name="content">
                 [Template content will be inserted here]
             </ui:insert>
-    </p:panel>
-    <div id="footer">
+    </div>
+    <div class="footer">
         <p>(C) 2016 Matthias Haschka</p>
     </div>
 </h:body>
