--- a/anwendung/src/main/webapp/ausgabeBuchen.xhtml
+++ b/anwendung/src/main/webapp/ausgabeBuchen.xhtml
@@ -1,47 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <body>
-    <ui:composition template="WEB-INF/template.xhtml">
-        <f:metadata>
-            <f:viewParam name="id" value="#{ausgabeBuchen.id}" required="true"/>
-            <f:viewAction action="#{ausgabeBuchen.init}"/>
-        </f:metadata>
+<ui:composition template="WEB-INF/template.xhtml">
+    <f:metadata>
+        <f:viewParam name="id" value="#{ausgabeBuchen.id}" required="true"/>
+        <f:viewAction action="#{ausgabeBuchen.init}"/>
+    </f:metadata>
 
-        <ui:define name="content">
 
-            <h:form>
-            <p:panel>
-                <p:row>
-                    <p:inputText id="betrag" value="#{ausgabeBuchen.betrag}"  span="2" placeholder="Betrag"/>
-                    <p:selectOneMenu id="aktivkonto" value="#{ausgabeBuchen.sollkonto}" span="4" placeholder="von">
-                        <f:selectItems value="#{ausgabeBuchen.aktivkonten}"/>
-                    </p:selectOneMenu>
-                    <p:selectOneMenu id="aufwandskonto" value="#{ausgabeBuchen.habenkonto}" span="4" placeholder="an">
-                        <f:selectItems value="#{ausgabeBuchen.aufwandskonten}"/>
-                    </p:selectOneMenu>
-                </p:row>
-                <hr/>
-                <h:inputHidden value="#{ausgabeBuchen.id}" id="id"/>
-                <p:row>
-                    <p:column span="2" offset="2">
-                        <p:button value="zurück" outcome="hauptbuch">
-                            <f:param name="id" value="#{ausgabeBuchen.id}"/>
-                        </p:button>
-                    </p:column>
-                    <p:column span="2">
-                        <p:commandButton value="Ausgabe buchen" action="#{ausgabeBuchen.ausführen}">
-                            <f:param name="id" value="#{param.id}"/>
-                        </p:commandButton>
-                    </p:column>
-                </p:row>
-            </p:panel>
-            </h:form>
-        </ui:define>
-    </ui:composition>
+    <ui:define name="content">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h2>Ausgabe buchen</h2>
+            </div>
+            <div class="panel-body">
+                <h:form styleClass="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-md-2" for="betrag">Betrag</label>
+                        <div class="col-md-10">
+                            <h:inputText id="betrag" value="#{ausgabeBuchen.betrag}" span="2" placeholder="Betrag"/>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-2" for="aktivkonto">von</label>
+                        <div class="col-md-10">
+                            <h:selectOneMenu id="aktivkonto" value="#{ausgabeBuchen.sollkonto}" span="4"
+                                             placeholder="von">
+                                <f:selectItems value="#{ausgabeBuchen.aktivkonten}"/>
+                            </h:selectOneMenu>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-2" for="aufwandskonto">an</label>
+                        <div class="col-md-10">
+                            <h:selectOneMenu id="aufwandskonto" value="#{ausgabeBuchen.habenkonto}" span="4"
+                                             placeholder="an">
+                                <f:selectItems value="#{ausgabeBuchen.aufwandskonten}"/>
+                            </h:selectOneMenu>
+                        </div>
+                    </div>
+
+                    <hr/>
+                    <h:inputHidden value="#{ausgabeBuchen.id}" id="id"/>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <h:button value="zurück" outcome="hauptbuch" styleClass="btn btn-default">
+                                <f:param name="id" value="#{ausgabeBuchen.id}"/>
+                            </h:button>
+                            <h:commandButton value="Ausgabe buchen"
+                                             action="#{ausgabeBuchen.ausführen}"
+                                             styleClass="btn btn-primary">
+                                <f:param name="id" value="#{param.id}"/>
+                            </h:commandButton>
+                        </div>
+                    </div>
+
+                </h:form>
+            </div>
+        </div>
+    </ui:define>
+</ui:composition>
 </body>
 </html>
