--- a/anwendung/src/main/webapp/hauptbuch.xhtml
+++ b/anwendung/src/main/webapp/hauptbuch.xhtml
@@ -2,70 +2,162 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <body>
-    <ui:composition template="WEB-INF/template.xhtml">
-        <f:metadata>
-            <f:viewParam name="id" value="#{hauptbuch.id}" />
-            <f:viewAction action="#{hauptbuch.init}"/>
-        </f:metadata>
-        <ui:define name="content">
-            <h1>Haushaltsbuch</h1>
-            <h2>Hauptbuch</h2>
-            (<h:outputLabel value="#{hauptbuch.id}"/>)
-            <br/>
+<ui:composition template="WEB-INF/template.xhtml">
+    <f:metadata>
+        <f:viewParam name="id" value="#{hauptbuch.id}"/>
+        <f:viewAction action="#{hauptbuch.init}"/>
+    </f:metadata>
+    <ui:define name="content">
+        <h1>Haushaltsbuch</h1>
+        <h2>Hauptbuch</h2>
+        (<h:outputLabel value="#{hauptbuch.id}"/>)
+        <br/>
 
+        <div class="btn-group" role="group">
 
-                <p:toolbar>
-                    <f:facet name="left">
-                        <p:button value="Konto anlegen" outcome="kontoAnlegen">
-                            <f:param name="id" value="#{hauptbuch.id}"/>
-                        </p:button>
-                        <p:button value="Ausgabe buchen" outcome="ausgabeBuchen">
-                            <f:param name="id" value="#{hauptbuch.id}"/>
-                        </p:button>
-                    </f:facet>
-                </p:toolbar>
+            <h:button value="Konto anlegen" outcome="kontoAnlegen" styleClass="btn btn-default">
+                <f:param name="id" value="#{hauptbuch.id}"/>
+            </h:button>
+            <h:button value="Ausgabe buchen" outcome="ausgabeBuchen" styleClass="btn btn-default">
+                <f:param name="id" value="#{hauptbuch.id}"/>
+            </h:button>
 
-            <br/>
+        </div>
+        <br/>
 
-
-            <p:panelGrid columns="2">
-                    <p:panel collapsed="false" header="Vermögen" toggleable="true">
-                        <ul>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#aktivKonten" aria-expanded="false" aria-controls="aktivKonten">
+                                Vermögen (<h:outputText value="#{hauptbuch.vermögen.size()}"/>)
+                                <i class="glyphicon glyphicon-chevron-left pull-right"></i>
+                            </a>
+                        </h4>
+                    </div>
+                    <div class="panel-body">
+                        <div id="aktivKonten" class="collapse">
+                        <ul class="list-group">
                             <ui:repeat value="#{hauptbuch.vermögen}" var="v">
-                                <li><h:outputLabel value="#{v}"/></li>
+                                <li class="list-group-item"><h:outputLabel value="#{v}"/></li>
                             </ui:repeat>
                         </ul>
-                    </p:panel>
-
-                    <p:panel collapsed="true" header="Schulden">
-                        <ul>
+                        </div>
+                        <h:link outcome="kontoAnlegen">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            Konto anlegen
+                            <f:param name="id" value="#{hauptbuch.id}"/>
+                            <f:param name="kontoart" value="Aktiv"/>
+                        </h:link>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#passivKonten" aria-expanded="false" aria-controls="passivKonten">
+                                Schulden (<h:outputText value="#{hauptbuch.schulden.size()}"/>)
+                                <i class="glyphicon glyphicon-chevron-left pull-right"></i>
+                            </a>
+                        </h4>
+                    </div>
+                    <div class="panel-body">
+                        <div id="passivKonten" class="collapse">
+                        <ul class="list-group">
                             <ui:repeat value="#{hauptbuch.schulden}" var="s">
-                                <li><h:outputLabel value="#{s}"/> </li>
+                                <li class="list-group-item"><h:outputLabel value="#{s}"/></li>
                             </ui:repeat>
                         </ul>
-                    </p:panel>
+                        </div>
 
+                        <h:link outcome="kontoAnlegen">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            Konto anlegen
+                            <f:param name="id" value="#{hauptbuch.id}"/>
+                            <f:param name="kontoart" value="Passiv"/>
+                        </h:link>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-                    <p:panel collapsed="true" header="Einnahmen">
-                        <ul>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#ertragskonten" aria-expanded="false" aria-controls="ertragskonten">
+                            Einnahmen (<h:outputText value="#{hauptbuch.einnahmen.size()}"/>)
+                            <i class="glyphicon glyphicon-chevron-left pull-right"></i>
+                        </a>
+                        </h4>
+                    </div>
+                    <div class="panel-body">
+                        <div id="ertragskonten" class="collapse">
+                        <ul class="list-group">
                             <ui:repeat value="#{hauptbuch.einnahmen}" var="e">
-                                <li><h:outputLabel value="#{e}"/></li>
+                                <li class="list-group-item"><h:outputLabel value="#{e}"/></li>
                             </ui:repeat>
                         </ul>
-                    </p:panel>
-                    <p:panel collapsed="true" header="Ausgaben">
-                        <ul>
+                        </div>
+                        <h:link outcome="kontoAnlegen">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            Konto anlegen
+                            <f:param name="id" value="#{hauptbuch.id}"/>
+                            <f:param name="kontoart" value="Ertrag"/>
+                        </h:link>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="aufwandskonten" aria-expanded="false" aria-controls="aufwandskonten">
+                                Ausgaben (<h:outputText value="#{hauptbuch.ausgaben.size()}"/>)
+                                <i class="glyphicon glyphicon-chevron-left pull-right"></i>
+                            </a>
+                        </h4>
+                    </div>
+                    <div class="panel-body">
+                        <div id="aufwandskonten" class="collapse">
+                        <ul class="list-group">
                             <ui:repeat value="#{hauptbuch.ausgaben}" var="a">
-                                <li><h:outputLabel value="#{a}"/></li>
+                                <li class="list-group-item"><h:outputLabel value="#{a}"/></li>
                             </ui:repeat>
                         </ul>
-                    </p:panel>
-            </p:panelGrid>
-        </ui:define>
-    </ui:composition>
+                        </div>
+                        <h:link outcome="kontoAnlegen">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            Konto anlegen
+                            <f:param name="id" value="#{hauptbuch.id}"/>
+                            <f:param name="kontoart" value="Aufwand"/>
+                        </h:link>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script>
+            $(function() {
+                function toggleChevron(e) {
+                    $(e.target)
+                            .parent()
+                            .prev()
+                            .find('h4 a i')
+                            .toggleClass('glyphicon-chevron-left glyphicon-chevron-down');
+                }
+
+                $('.collapse').on('hidden.bs.collapse', toggleChevron);
+                $('.collapse').on('shown.bs.collapse', toggleChevron);
+            })
+        </script>
+    </ui:define>
+</ui:composition>
 </body>
 </html>
