--- a/anwendung/src/main/webapp/index.xhtml
+++ b/anwendung/src/main/webapp/index.xhtml
@@ -2,22 +2,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
+      xmlns:b="http://butterfaces.larmic.de/components"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <body>
     <ui:composition template="WEB-INF/template.xhtml">
         <ui:define name="content">
-            <p:panel>
+            <div class="jumbotron">
                 <h1>Haushaltsbuch</h1>
                 <p>Jetzt mit der Haushaltsbuchführung beginnen und ein
                 Übersicht des eigenen Vermögens erhalten.</p>
                 <h:form>
-                    <p:commandButton id="beginnen"
-                            value="Haushaltsbuchführung beginnen"
-                                     action="#{haushaltsbuchführung.beginnen}"/>
+                    <h:commandButton id="beginnen" styleClass="btn btn-primary"
+                            value="Haushaltsbuchführung beginnen" action="#{haushaltsbuchführung.beginnen}"/>
                 </h:form>
-            </p:panel>
+            </div>
         </ui:define>
     </ui:composition>
 </body>
