--- a/anwendung/src/main/webapp/index.xhtml
+++ b/anwendung/src/main/webapp/index.xhtml
@@ -10,10 +10,10 @@
         <ui:define name="content">
             <div class="jumbotron">
                 <h1>Haushaltsbuch</h1>
-                <p>Jetzt mit der Haushaltsbuchführung beginnen und ein
+                <p class="lead">Jetzt mit der Haushaltsbuchführung beginnen und eine
                 Übersicht des eigenen Vermögens erhalten.</p>
                 <h:form>
-                    <h:commandButton id="beginnen" styleClass="btn btn-primary"
+                    <h:commandButton id="beginnen" styleClass="btn btn-primary btn-lg"
                             value="Haushaltsbuchführung beginnen" action="#{haushaltsbuchführung.beginnen}"/>
                 </h:form>
             </div>
