--- a/anwendung/src/main/webapp/hauptbuch.xhtml
+++ b/anwendung/src/main/webapp/hauptbuch.xhtml
@@ -119,7 +119,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="aufwandskonten" aria-expanded="false" aria-controls="aufwandskonten">
+                            <a data-toggle="collapse" href="#aufwandskonten" aria-expanded="false" aria-controls="aufwandskonten">
                                 Ausgaben (<h:outputText value="#{hauptbuch.ausgaben.size()}"/>)
                                 <i class="glyphicon glyphicon-chevron-left pull-right"></i>
                             </a>
