Dokumentation des Modells

--- a/coding/modelldokumentation/src/main/java/com/github/haschi/modelldokumentation/Modell.html
+++ b/coding/modelldokumentation/src/main/java/com/github/haschi/modelldokumentation/Modell.html
@@ -10,12 +10,12 @@
             width: 78mm;
             height: 78mm;
             background-color: skyblue;
-            padding: 4mm;
-            margin-right: 4mm;
-            margin-bottom: 4mm;
+            /*padding: 4mm;*/
+            /*margin-right: 4mm;*/
+            /*margin-bottom: 4mm;*/
             overflow: hidden;
             float: left;
-            padding: 5mm;
+            /*padding: 5mm;*/
         }
 
         .modell p {
