Anpassung der POM an Wildfly Quickstart Beispiele

--- a/anwendung/src/main/webapp/hauptbuch.xhtml
+++ b/anwendung/src/main/webapp/hauptbuch.xhtml
@@ -12,11 +12,7 @@
     </f:metadata>
     <ui:define name="content">
         <h1>Haushaltsbuch</h1>
-        <h2>Hauptbuch</h2>
-        (
-        <h:outputLabel value="#{hauptbuch.id}"/>
-        )
-        <br/>
+        <h2 title="#{hauptbuch.id}">Hauptbuch</h2>
 
         <div class="btn-group" role="group">
 
