--- a/anwendung/src/main/webapp/WEB-INF/template.xhtml
+++ b/anwendung/src/main/webapp/WEB-INF/template.xhtml
@@ -10,7 +10,7 @@
 >
 <h:head>
     <title>Haushaltsbuch</title>
-    <meta charset="utf-8"></meta>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
 </h:head>
 <h:body>
