--- a/anwendung/src/main/webapp/index.xhtml
+++ b/anwendung/src/main/webapp/index.xhtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:b="http://butterfaces.larmic.de/components"
       xmlns="http://www.w3.org/1999/xhtml">
 <body>
 <ui:composition template="WEB-INF/template.xhtml">
