Code Inspection: Typos

--- a/anwendung/src/main/webapp/kontoAnlegen.xhtml
+++ b/anwendung/src/main/webapp/kontoAnlegen.xhtml
@@ -17,9 +17,9 @@
             <div class="panel-body">
                 <h:form>
                     <div class="form-group">
-                        <label for="kontoname">Kontoname</label>
-                        <h:inputText id="kontoname"
-                                     value="#{kontoAnlegen.kontoname}"
+                        <label for="bezeichnung">Kontoname</label>
+                        <h:inputText id="bezeichnung"
+                                     value="#{kontoAnlegen.bezeichnung}"
                                      styleClass="form-control"
                                      placeholder="Kontonamen hier eingeben">
                             <f:validateRequired/>
